--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 body
 {
-    background-color: chocolate;
+    background-color: gray;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 8fr 1fr;
@@ -22,7 +22,6 @@ body
 
 .root-mid
 {
-    border: #fff 1px solid;
     display: flex;
     flex-direction: column;
     align-self: center;
@@ -53,4 +52,66 @@ body
     align-self: center;
 
     text-align: center;
+}
+
+/* This is for the character selection*/
+
+.choose-top{
+    display: grid;
+    border: #fff 1px solid;
+    font-family: 'Anton', sans-serif;
+    line-height: 1;
+    font-size: 3em;
+    color: #000;
+    justify-content: center;
+    align-content: center;
+}
+
+.choose-mid{
+    display: grid;
+    align-content: center; 
+    justify-content: center;
+    /* grid-template-rows: 2fr, 1fr; */
+}
+
+#images
+{
+    display: grid;
+    grid-gap: 10px;
+
+    border: 4px solid black;
+    /* grid-template-rows: 1fr, 1fr;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr; */
+}
+#images :nth-child(1){
+    grid-column: 1;
+}
+#images :nth-child(2){
+    grid-column: 2;
+}
+#images :nth-child(3){
+    grid-column: 3;
+}
+#images :nth-child(4){
+    grid-column: 4;
+}
+
+#description{
+    text-align: center; 
+    font-family: 'Anton', sans-serif;
+    line-height: 1;
+    font-size: 1.5em;
+    color: #000;   
+}
+.fighter-icon{
+    cursor: pointer;
+    height: 100px;
+    width: auto;
+}
+
+.choose-bottom{
+    display: flex;
+    align-self: center;
+    justify-content: flex-end;
+    margin: 60px;
 }
