--- a/styles.css
+++ b/styles.css
@@ -90,17 +90,18 @@ body
     display: grid;
     align-content: center; 
     justify-content: center;
-    /* grid-template-rows: 2fr, 1fr; */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 2fr 1fr 1fr;
+
 }
 
 #images
 {
     display: grid;
     grid-gap: 10px;
-
     border: 4px solid black;
-    /* grid-template-rows: 1fr, 1fr;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr; */
+    grid-row: 1;
+    grid-column: 2;
 }
 #images :nth-child(1){
     grid-column: 1;
@@ -121,6 +122,21 @@ body
     line-height: 1;
     font-size: 1.5em;
     color: #000;   
+    grid-column: 2;
+    grid-row: 3;
+    
+}
+
+#icon-name{
+    text-align: center; 
+    align-self: center;
+    font-family: 'Anton', sans-serif;
+    line-height: 1;
+    font-size: 2em;
+    color: darkblue; 
+    grid-row: 2;
+    grid-column: 2;
+
 }
 .fighter-icon{
     cursor: pointer;
@@ -156,12 +172,6 @@ body
 #backgrounds{
     align-self: center;
 }
-/* #left-click{
-    align-content: center;
-}
-#right-click{
-    align-content: center;
-} */
 
 .background-bottom
 {
@@ -227,10 +237,8 @@ body
 }
 
 .middle-text{
-        font-family: 'JMH Cthulhumbus Arcade';
-    font-size: 2em;
-    text-shadow: 2px 3px darkred;
-    color: rgb(136, 255, 0);;
+    width: 160px;
+    height: auto;
 }
 .fighter-2
 {
